# doctavious-cli

./: .gitignore  .nvimlog  CHANGELOG.md  Cargo.toml  Makefile  NOTICE.txt  README.md  TODO.md  build.rs  doctavious.toml
install/: install.sh
src/: constants.rs  doctavious_error.rs  edit.rs  error.rs  file_structure.rs  files.rs  frontmatter.rs  git.rs  keyring.rs  main.rs  markdown.rs  markup_format.rs  output.rs  scm.rs  settings.rs  templates.rs  utils.rs
src/commands/: adr.rs  cdg.rs  changelog.rs  deploy.rs  login.rs  mod.rs  presentation.rs  release.rs  rfd.rs  service_directory.rs  snippets.rs  software_template.rs  telemetry.rs  til.rs
src/commands/changelog/: changelog.rs  commit.rs  mod.rs  release.rs
src/commands/deploy/: mod.rs
src/commands/design_decisions/: adr.rs  mod.rs  rfd.rs  toc.rs
src/commands/githooks/: githooks.rs  mod.rs
src/commands/link/: mod.rs
src/commands/setup/: mod.rs
templates/adr/: init.adoc  init.md  template.adoc  template.md
templates/changelog/: config.toml
templates/rfc/: template.md
templates/rfd/: template.adoc  template.md
templates/til/: template.adoc  template.md
tests/: adr_tests.rs  test.rs
tests/resources/: sample_csv.csv
tests/resources/docs/til/: README.md
tests/resources/docs/til/foo/: .foobar-hello-world.adoc  Hello World &.adoc  a-different-name.adoc
tests/resources/docs/til/maven/: plugin-stage.md
tests/resources/docs/til/rust/: cargo-blah.md  cool-feature.md
tests/resources/framework_configs/antora/: antora-playbook.yaml
tests/resources/framework_configs/astro/: astro.config.mjs
tests/resources/framework_configs/docfx/: docfx.json
tests/resources/framework_configs/eleventy/: .eleventy.js
tests/resources/framework_configs/gatsby/: gatsby-config.js
tests/resources/framework_configs/hexo/: _config.yml
tests/resources/framework_configs/hugo/: config.toml
tests/resources/framework_configs/jekyll/: _config.yml
tests/resources/framework_configs/mdbook/: book.toml
tests/resources/framework_configs/mkdocs/: mkdocs.yml
tests/resources/framework_configs/nuxtjs/: nuxt.config.js
tests/resources/framework_configs/sveltekit/: svelte.config.js
tests/resources/framework_configs/vitepress/: config.js  config.ts
tests/resources/framework_configs/vuepress/: config.js  config.toml  config.ts
