[package]
name = "doctavious-cli"
version = "0.1.0"
edition = "2018"
description = "Doctavious CLI"
repository = "https://github.com/doctavious/doctavious-cli"
keywords = ["cli", "documentation", "rfc", "adr"]
categories = ["documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.9.0"
pulldown-cmark = "0.8.0"
pulldown-cmark-to-cmark = "6.0.0" # pulldown-cmark doesnt allow you to translate events back to cmark. ugh
chrono = "0.4"
clap = "2.33.3"
comfy-table = "1.1.1"
dirs = "2.0.2"
env_logger = "0.7"
git2 = "0.13.11"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.3"
tempfile = "3.1.0"
toml = "0.5"
tokio = { version = "0.2", features = ["macros", "fs"] }
unidecode = "0.3.0"
walkdir = "2.3.1"
which = "4.0.2"

# presentations
# https://github.com/marp-team/marpit
# https://github.com/marp-team/marp-cli
# https://github.com/marp-team/marp-core
# https://jesselawson.org/rust/getting-started-with-rust-by-building-a-tiny-markdown-compiler/
# http://patshaughnessy.net/2019/9/4/using-rust-to-build-a-blog-site
# markdown2html-converter = "1.1.2"
# Pulldown-cmark vs comrak 
# need to work on rust-asciidoctor-parser 
# mdbook = "0.4.4" --> see how they convert markdown. they have init, build, watch, serve 
# Maud is an HTML template crate
# Syntect is a color syntax highlighting crate
# rust doesnt have a puppeteer so 
# fantoccini = "0.14.2" --> A high-level API for programmatically interacting with web pages through WebDriver.
# https://github.com/atroche/rust-headless-chrome
# https://docs.rs/pandoc/0.8.0/pandoc/
# marpit uses https://github.com/gitbrent/PptxGenJS which creates Open Office XML (OOXML) Presentations
# what about pptx via OpenDocument formats - we might have to build our own crate 
# what else do we need to do presentations?
# https://github.com/FreeMasen/mdbook-presentation-preprocessor

# graphviz
# graphviz is part of core rust?
# mdbook-graphviz = "0.0.2"

[build-dependencies]
walkdir = "2.3.1"